tests/ty-name-escape/out.txt
error: expression causes a type name to escape its scope
  ┌─ err.sml:3:6
  │
3 │   in guh end
  │      ^^^

typechecking failed
